Breakpoint -2 added tools and css

--- a/index.html
+++ b/index.html
@@ -1,39 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" 
-    content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        html,
-        body {
-            margin: 0px;
-            padding: 0px;
-        }
-
-        * {
-            box-sizing: border-box;
-        }
-    </style>
+   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!-- drawing board -->
+    <div class="tool-bar">
+        <div class="tools">
+            <div class="tool">
+                <img src="./NewIcons/Black_Pencil.svg" alt="" id="pencil" class="tool-img">
+                <div class="tool-options"></div>
+            </div>
+            <div class="tool">
+                <img src="./NewIcons/Eraser.svg" alt="" id="eraser" class="tool-img ">
+                <div class="tool-options"></div>
+            </div>
+
+        </div>
+    </div>
     <canvas class="board"></canvas>
     <script>
         let board = document.querySelector(".board");
-        board.height = window.innerHeight;
-        board.width = window.innerWidth;
+        
         // draw tool
         const ctx = board.getContext("2d");
         // console.log(tool);
         ctx.lineWidth = 10;
-        // rendering 
-       ctx.strokeRect(75, 140, 150, 110);
-        ctx.fillStyle = "red";
-        ctx.fillRect(75, 140, 150, 110);
-        // Door
+        // rendering
+        //    ctx.strokeRect(75, 140, 150, 110);
+        // ctx.fillStyle = "red";
+        // ctx.fillRect(75, 140, 150, 110);
+        // ctx.beginPath();
+        // ctx.moveTo(30, 30);
+        // ctx.lineTo(150, 150);
+        // ctx.lineTo(250, 150);
+        // ctx.moveTo(200, 200);
+        // ctx.lineTo(300, 300);
+        // // to render on ui => stroke
+        // ctx.stroke();
     </script>
+
+    <script src="draw.js"></script>
 </body>
+
 </html>
